added details about Hayden

--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
 <body>
     <h1>Some kind of title</h1>
     <h2>We are in the develop branch</h2>
+
+    <img src="./img/Profile Pic (2).jpg" width="250" height="250" alt="Hayden's Photo">
+    <h3>Hayden's Profile</h3>
+    <h4>Brief</h4>
+    <h4>Observant</h4>
+    <h4>Nice</h4>
+    <h4>Extrovert</h4>
+    <h4>Realistic</h4>
+
 </body>
 </html>
