--- a/index.html
+++ b/index.html
@@ -9,5 +9,21 @@
 <body>
     <h1>Some kind of title</h1>
     <h2>We are in the develop branch</h2>
+
+    <h2>Team Git or Get Got</h2>
+    <img src="../IMG_1532.JPG"
+    width = "250" height="250"
+    alt = "Picture of Cyrus">
+    <h3>This is the profile for Cyrus</h3>
+    <h4>Here is a little about me...</h4>
+    <ol>
+        <li>Arsenal Fan</li>
+        <li>Social</li>
+        <li>Smart</li>
+        <li>Honest</li>
+        <li>Outdoorsy</li>
+        <li>Loyal</li>
+        <li>Excellent Father</li>
+    </ol>
 </body>
 </html>
