--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
 <body>
     <h1>Some kind of title</h1>
     <h2>We are in the develop branch</h2>
+
+
+<h3>Ethan's Profile</h3>
+<img src = "Gigachad.jpg" height="250" width="250"/>
+<h5></h5>
+<ul>
+<li>Charismatically challenged</li>
+<li>Has no hair</li>
+<li>Allways thinking about food</li>
+<li>Dabbles in cooking and pc building</li>
+</ul>
 </body>
 </html>
