added list items to Hayden details

--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
   
   <img src="./img/Profile Pic (2).jpg" width="250" height="250" alt="Hayden's Photo">
     <h3>Hayden's Profile</h3>
-    <h4>Brief</h4>
-    <h4>Observant</h4>
-    <h4>Nice</h4>
-    <h4>Extrovert</h4>
-    <h4>Realistic</h4>
+    <ol>
+        <li>Brief</li>
+        <li>Observant</li>
+        <li>Nice</li>
+        <li>Extrovert</li>
+        <li>Realistic</li>
+    </ol>
   
   <h3>Ethan's Profile</h3>
   <img src = "Gigachad.jpg" height="250" width="250"/>
