--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
 <body>
@@ -23,16 +24,19 @@
         <li>Excellent Father</li>
     </ol>
   
+<div class="Hayden">
   <img src="./img/Profile Pic (2).jpg" width="250" height="250" alt="Hayden's Photo">
-    <h3>Hayden's Profile</h3>
-    <ol>
-        <li>Brief</li>
-        <li>Observant</li>
-        <li>Nice</li>
-        <li>Extrovert</li>
-        <li>Realistic</li>
-    </ol>
-  
+
+      <h3>Hayden's Profile</h3>
+      <ul>
+          <li>Brief</li>
+          <li>Observant</li>
+          <li>Nice</li>
+          <li>Extrovert</li>
+          <li>Realistic</li>
+        </ul>
+</div>
+        
   <h3>Ethan's Profile</h3>
   <img src = "Gigachad.jpg" height="250" width="250"/>
   <h5></h5>
