--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <title>Document</title>
 </head>
 <body>
     <h2>Team Git or Get Got</h2>
-    <img src="../IMG_1532.JPG"
+    <img src="./img/IMG_1532.JPG"
     width = "250" height="250"
     alt = "Picture of Cyrus">
     <h3>This is the profile for Cyrus</h3>
@@ -31,16 +32,15 @@
     <h4>Extrovert</h4>
     <h4>Realistic</h4>
   
-  <h3>Ethan's Profile</h3>
-  <img src = "Gigachad.jpg" height="250" width="250"/>
-  <h5></h5>
+<div class="Ethan">
+    <img src = "./img/Gigachad.jpg" height="250" width="250" alt="Totally accurate photo of Ethan">
+    <h3>Ethan's Profile</h3>
   <ul>
-  <li>Charismatically challenged</li>
-  <li>Has no hair</li>
-  <li>Allways thinking about food</li>
-  <li>Dabbles in cooking and pc building</li>
+    <li>Charismatically challenged</li>
+    <li>Has no hair</li>
+    <li>Always thinking about food</li>
+    <li>Dabbles in cooking and pc building</li>
   </ul>
-  
-
+  </div>
 </body>
 </html>
