--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel = "stylesheet" type = "text/css" href="main.css">
 </head>
 <body>
     <h2>Team Git or Get Got</h2>
+    <div class = "cyrus">
     <img src="../IMG_1532.JPG"
     width = "250" height="250"
     alt = "Picture of Cyrus">
     <h3>This is the profile for Cyrus</h3>
     <h4>Here is a little about me...</h4>
-    <ol>
+    <ul>
         <li>Arsenal Fan</li>
         <li>Social</li>
         <li>Smart</li>
@@ -21,8 +23,8 @@
         <li>Outdoorsy</li>
         <li>Loyal</li>
         <li>Excellent Father</li>
-    </ol>
-  
+    </ul>
+  </div>
   <img src="./img/Profile Pic (2).jpg" width="250" height="250" alt="Hayden's Photo">
     <h3>Hayden's Profile</h3>
     <h4>Brief</h4>
